working without style

--- a/index.html
+++ b/index.html
@@ -7,27 +7,26 @@
     <title>Stock Prices</title>
 </head>
 <body>
-    <h2>Stock Prices</h2>
+    <h2>Tesla Stock Price</h2>
     <div class = "window">
-        <img src = "">
+        <img src = "Image/TSLA_BIG-29a70360.png">
         <div class = "currInfo">
             <div class = "ticker">
-                
+                TSLA
             </div>
             <div class = "price">
-
+                100
             </div>
             <div class = "percentChange">
-
+                -2.5%
             </div>
         </div>
         <div class = "newsStories">
 
         </div>
-
     </div>
     
 </body>
 <script src="script.js"></script>
-<script scr="styles.css"></script>
+<link rel="stylesheet" href="styles.css">
 </html>
